# vprism

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_NAMING.md  CLAUDE.md  Dockerfile  MCP_DEPLOYMENT_GUIDE.md  Makefile  PROVIDER_IMPLEMENTATION_SUMMARY.md  PROVIDER_INTEGRATION_STRATEGY_SUMMARY.md  README.md  VERIFICATION_REPORT.md  VPRISM_NATIVE_PROVIDER_SUMMARY.md  docker-compose.yml  initinal-prompt.md  main.py  mcp_config.json  mcp_config.yaml  pyproject.toml  requirements-web.txt  test_web_basic.py  vprism_cache.duckdb
.claude/: product.md  settings.json  settings.local.json  spec-config.json  structure.md  tech.md
.claude/commands/: bug-analyze.md  bug-create.md  bug-fix.md  bug-verify.md  spec-create.md  spec-design.md  spec-execute.md  spec-init.md  spec-requirements.md  spec-tasks.md  steering-init.md  steering-update.md
.claude/scripts/: README.md  generate-commands-launcher.sh  generate-commands.bat  generate-commands.sh
.claude/templates/: design-template.md  requirements-template.md  tasks-template.md
.github/workflows/: ci.yml
.kiro/hooks/: auto-git-commit.kiro.hook
.kiro/steering/: common-pitfalls.md  development-workflow.md  directory-rules.md  focus-strategy.md  product.md  structure.md  tech.md
devjournal/: 2025-07-21-DEV_JOURNAL.md  MCP_DEPLOYMENT_GUIDE.md  README.md  VERIFICATION_REPORT.md
docs/: README.md  faq.md  performance_optimization.md  prd_plan.json  quickstart.md  security_system.md  troubleshooting.md  versioning.md
docs/api/: library.md  mcp.md  web.md
docs/deployment/: README.md
docs/prd/: PRD-0.md  PRD-1.md  PRD-2.md  PRD-3.md  PRD-4.md  PRD-5.md  PRD-6.md  PRD-7.md  PRD-8.md  PRD-9.md  README.md
docs/reference/: coding-standards.md
examples/: README.md  api_usage_examples.py  data_quality_example.py  fund_codes.txt  http_adapter_example.py  library_usage.py  provider_usage.py  provider_usage_example.py  quickfetch.py  quickrun.py  vprism_native_provider_example.py  web_service_demo.py
guide/: README.md  WEB_SERVICE_README.md
src/: vprism.py
src/core/: __init__.py
tests/: __init__.py  conftest.py  stub_provider.py  test_batch_processor.py  test_cache.py  test_circuit_breaker.py  test_cli.py  test_consistency.py  test_data_quality.py  test_data_router.py  test_data_service.py  test_database.py  test_dual_api.py  test_error_handling.py  test_exceptions.py  test_exceptions_simple.py  test_health.py  test_init.py  test_lazy_imports.py  test_library_interface.py  test_logging.py  test_mcp_server.py  test_price_adjustment.py  test_price_adjustment_factors.py  test_providers.py  test_quality_system.py  test_raw_ingestion.py  test_raw_ingestion_quality_metrics.py  test_raw_ingestion_validation.py  test_repositories.py  test_repository.py  test_repository_integration.py  test_retry.py  test_schema.py  test_storage.py  test_symbol_normalization.py  test_vprism_init.py  test_web_service.py
vprism/: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  __init__.py  cli.py  docker-compose.yml  main.py  pyproject.toml  vprism.py
vprism/.github/workflows/: ci.yml
vprism/auth/: security_system.md
vprism/cli/: __init__.py  constants.py  data.py  drift.py  errors.py  formatters.py  main.py  quality.py  reconciliation.py  shadow.py  symbol.py  utils.py
vprism/core/: __init__.py  cache.py  client.py  config.py  data_router.py  data_service.py  exceptions.py  http_adapter.py  interfaces.py  mock_providers.py  models.py  provider_abstraction.py  provider_config.py  provider_factory.py  provider_integration_strategy.py  provider_registry.py  query_builder.py  repository.py
vprism/core/client/: __init__.py  builder.py  client.py  query.py
vprism/core/config/: __init__.py  settings.py
vprism/core/data/: __init__.py  routing.py  schema.py
vprism/core/data/cache/: __init__.py  duckdb.py  key.py  memory.py  multilevel.py
vprism/core/data/ingestion/: __init__.py  config.py  models.py  raw_ingestion.py  service.py  validator.py
vprism/core/data/providers/: __init__.py  akshare.py  alpha_vantage.py  base.py  factory.py  registry.py  stub_provider.py  yfinance.py
vprism/core/data/repositories/: __init__.py  base.py  cache.py  data.py  provider.py  query.py
vprism/core/data/storage/: __init__.py  database.py  database_schema.py  duckdb_factory.py  factory.py  models.py  repository.py  schema.py
vprism/core/exceptions/: __init__.py  base.py  codes.py  domain.py  handler.py  messages.py
vprism/core/health/: __init__.py  checker.py
vprism/core/logging/: __init__.py  config.py  logger.py
vprism/core/models/: __init__.py  base.py  corporate_actions.py  market.py  query.py  response.py  symbols.py
vprism/core/monitoring/: __init__.py  health.py  logging.py  metrics.py  performance.py
vprism/core/patterns/: __init__.py  circuitbreaker.py  resilient.py  retry.py
vprism/core/plugins/: __init__.py  loader.py
vprism/core/providers/: __init__.py  akshare_provider.py  alpha_vantage_provider.py  vprism_native_provider.py  yfinance_provider.py
vprism/core/services/: __init__.py  adjustment.py  adjustment_engine.py  batch.py  calendars.py  data.py  data_router.py  drift.py  reconciliation.py  routing.py  shadow.py  shadow_diff.py  symbol_normalization.py  symbol_rule_loader.py  symbols.py
vprism/core/services/quality/: __init__.py  duplicate_detector.py  gap_detector.py  thresholds.py
vprism/core/validation/: __init__.py  consistency.py  quality.py  schema_assertions.py
vprism/docker/: DOCKER_DEPLOY.md  Dockerfile  docker-compose.extensions.yml  docker-compose.yml
vprism/docker/nginx/: nginx.conf
vprism/mcp/: __init__.py  __main__.py  mcp_config.json  mcp_config.yaml  server.py
vprism/src/vprism/: __init__.py
vprism/src/vprism/models/: __init__.py  data.py  enums.py
vprism/src/vprism/providers/: __init__.py  base.py
vprism/tests/: conftest.py
vprism/tests/unit/: test_basic.py  test_data_models.py  test_models.py  test_providers.py
vprism/web/: __init__.py  app.py  main.py  metrics.py  models.py  utils.py
vprism/web/routes/: __init__.py  data_routes.py  health_routes.py
(+237 files in other folders)
