[project]
name = "vprism"
version = "0.1.0"
description = "Modern Financial Data Infrastructure"
authors = [{name = "vprism Team"}]
requires-python = ">=3.11"
dependencies = [
    # 核心框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    # HTTP 客户端
    "httpx>=0.25.0",
    # 数据处理和存储
    "pandas>=2.1.0",
    "polars>=0.19.0",
    "duckdb>=0.9.0",
    # 命令行
    "typer>=0.9.0",
    "rich>=13.0.0",
    # 日志系统
    "loguru>=0.7.0",
    # 配置管理
    "pydantic-settings>=2.1.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "nest-asyncio>=1.5.0",
    # 安全
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "akshare>=1.17.24",
    "yfinance>=0.2.65",
    "aiohttp>=3.12.14",
    "fastmcp>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx[test]>=0.25.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/vprism_mcp", "src/web"]

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
pythonpath = ["src"]
