[project]
name = "vprism"
version = "0.1.0"
description = "Modern Financial Data Infrastructure"
authors = [{name = "vprism Team"}]
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    # HTTP client
    "httpx>=0.28.1",
    # Data processing & storage
    "pandas>=3.0.1",
    "duckdb>=1.4.4",
    # CLI
    "typer>=0.24.1",
    "rich>=14.3.3",
    # Logging
    "loguru>=0.7.3",
    # Config
    "tomli>=2.4.0",
    "tomli-w>=1.2.0",
    # Async
    "nest-asyncio>=1.6.0",
    # MCP
    "fastmcp>=3.0.2",
]

[project.optional-dependencies]
providers = [
    "akshare>=1.18.30",
    "yfinance>=1.2.0",
    "aiohttp>=3.13.3",
]
dev = [
    "ruff>=0.15.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vprism"]

[tool.ruff]
target-version = "py313"
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = "tests"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "perf: performance benchmark tests",
]
